# resinkit-sdk-python

./: .env.common  .gitignore  CLAUDE.md  Makefile  README.md  Untitled1.ipynb  e2e.sh  pyproject.toml  resinkit_localhost.ipynb  test_mcp_imports.py
.github/workflows/: python-publish.yml
chroma_db/: chroma.sqlite3
designs/: Knowledge_Base_Design.md  ai_tools_ui.md  example_using_pydantic_ai.md  resinkt_api_tools.md  sql_generator_agent_design.md
examples/: .mcp.json  README.md  factory_usage.py  http_mcp_example.py  llm_manager_example.py  mcp_config_example.json  pydantic_ai_sql_example.py  sql_generation_agent_example.py  sql_generator_workflow_example.py
examples/.claude/commands/: rsk.md
knowledge_base_data/: kb_default_state.json
resinkit/: __init__.py  async_resinkit_client.py  flink_operation.py  flink_session.py  resinkit.py  session_utils.py
resinkit/ai/: agent.py  prompt.py
resinkit/ai/agents/: README.md  __init__.py  agent_manager.py  http_mcp_client.py  mcp_defaults.py  mcp_examples.py  mcp_integration.py  mcp_manager.py  mcp_types.py  sql_gen_agent.py  sql_generator_workflow.py
resinkit/ai/prompts/: prompt_01.txt
resinkit/ai/tools/: Knowledge_Base_Design.md  Run_SQL_Design.md  __init__.py  knowledge_base.py  list_sql_sources.py  mcp_connector.py  resinkit_api_tools.py  resinkit_mcp_tools_design.md  resinkt_api_tools.md  run_sql.py
resinkit/ai/utils/: __init__.py  llm_manager.py  mcp_manager.py
resinkit/core/: resinkit_api_client.py  settings.py  task.py
resinkit/ui/: __init__.py  ai_tools_ui.py  sources_ui.md  sources_ui.py  sql_task_ui.py  tasks.py  tasks_management_ui.md  tasks_management_ui.py  variables.py  variables_ui.py
resinkit_api_client/: README.md  __init__.py
resinkit_api_client/api/catalog/: create_catalog_api_v1_catalogstores_catalogstore_name_catalogs_post.py  create_catalog_store_api_v1_catalogstores_post.py  delete_catalog_api_v1_catalogstores_catalogstore_name_catalogs_catalog_name_delete.py  delete_catalog_store_api_v1_catalogstores_catalogstore_name_delete.py  get_catalog_api_v1_catalogstores_catalogstore_name_catalogs_catalog_name_get.py  get_catalog_store_api_v1_catalogstores_catalogstore_name_get.py  list_catalog_stores_api_v1_catalogstores_get.py  list_catalogs_api_v1_catalogstores_catalogstore_name_catalogs_get.py  (+1 more)
resinkit_api_client/api/db_crawl/: crawl_database_tables.py
resinkit_api_client/models/: __init__.py  analysis_config.py  attribute_detection_config.py  body_upload_jar_api_v1_flink_lib_upload_post.py  catalog_request.py  catalog_request_properties.py  catalog_response.py  catalog_response_properties.py  catalog_store_definition.py  catalog_store_definition_options.py  catalog_stores_response.py  column_dsds.py  column_info.py  database_info.py  database_kind.py  db_crawl_config.py  db_crawl_request.py  db_crawl_result.py  default_settings.py  dsds_config.py  error_response.py  global_defaults.py  kafka_crawl_config.py  kafka_crawl_request.py  kafka_crawl_result.py  kafka_field_analysis.py  kafka_field_analysis_analysis.py  kafka_inferred_schema.py  kafka_inferred_schema_properties_type_0.py  kafka_json_schema_property.py  kafka_json_schema_property_items_type_0.py  kafka_json_schema_property_properties_type_0.py  kafka_retrieval_metadata.py  kafka_source.py  kafka_topic_crawl_result.py  kafka_topic_crawl_result_field_analysis_type_0.py  log_entry.py  retrieval_metadata.py  sampling_strategy.py  schema_inference_config.py  (+27 more)
sample_notebooks/: .byoc.ipynb.layout  .gitignore  Untitled.ipynb  byoc.ipynb  paimon_demo.ipynb  quick_start.ipynb  rk_show_configs.py  rs_local_0519_variables.py  rs_task_and_variable_ui.ipynb  show_configs.py
tests/: sample_responses.py  test_async_resinkit_client_fetch_results_async_gen.py  test_flink_operation.py  test_flink_session.py  test_session_utils_create_dataframe.py  test_session_utils_get_fetch_result_data.py
tests/e2e/: conftest.py  e2e_base.py  end_to_end_test_guide.md  test_api_client.py  test_examples.py  test_list_sql_sources_tool.py  test_mcp_manager.py  test_sql_generation_agent.py  test_ui_initialization.py
(+30 files in other folders)
