[project]
name = "resinkit-sdk-python"
version = "0.1.0"
description = "A Python SDK for ResinKit"
authors = [{ name = "resink.ai", email = "contact@resink.ai" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "pandas>=2.0.0,<3",
    "flink-sql-gateway-api==1.19.0",
    "flink-job-manager-api>=1.0.2",
    "panel>=1.7.4",
    "ipywidgets>=8.1.0",
    "jupyter_bokeh>=4.0.5",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "llama-index-core>=0.12.48",
    "llama-index-llms-openai>=0.4.7",
    "llama-index-llms-anthropic>=0.7.6",
    "llama-index-llms-google-genai>=0.2.4",
    "llama-index-embeddings-openai>=0.3.1",
    "llama-index-embeddings-google-genai>=0.2.1",
    "llama-index-readers-file>=0.4.11",
    "llama-index-vector-stores-chroma>=0.4.2",
    "chromadb>=1.0.15",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9",
    "black>=24.0.0,<25",
    "isort>=5.13.0,<6",
    "flake8>=7.0.0,<8",
    "jupyterlab>=4.3.0",
]

[tool.hatch.build.targets.sdist]
include = ["resinkit"]

[tool.hatch.build.targets.wheel]
include = ["resinkit"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
