[project]
name = "resinkit-sdk-python"
version = "0.1.0"
description = "A Python SDK for ResinKit"
authors = [{ name = "resink.ai", email = "contact@resink.ai" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "pandas>=2.2.0,<3",
    "flink-sql-gateway-api==1.19.0",
    "flink-job-manager-api>=1.0.2",
    "panel>=1.7.5",
    "ipywidgets>=8.1.7",
    "jupyter_bokeh>=4.0.5",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.10.0",
    "httpx>=0.28.1",
    "pydantic-ai>=0.4.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1,<9",
    "pytest-asyncio>=0.24.0,<1",
    "black>=25.1.0,<26",
    "isort>=6.0.1,<7",
    "flake8>=7.3.0,<8",
    "jupyterlab==4.1.8",
]

[tool.hatch.build.targets.sdist]
include = ["resinkit", "resinkit_api_client"]

[tool.hatch.build.targets.wheel]
include = ["resinkit", "resinkit_api_client"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
